# vst3utils

./: .gitmodules  CMakeLists.txt  ReadMe.md
include/vst3utils/: buffer.h  byteorder_stream.h  enum_array.h  event_iterator.h  events.h  message.h  norm_plain_conversion.h  observable.h  parameter.h  parameter_changes_iterator.h  parameter_description.h  parameter_updater.h  smooth_value.h  string_conversion.h  transport_state_observer.h
tests/: .clang-format  attribute_list_test.cpp  buffer_test.cpp  events_test.cpp  message_test.cpp  norm_plain_conversion_test.cpp  observable_test.cpp  string_conversion_test.cpp  transport_state_observer_test.cpp
